--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
 .App-logo {
   height: 40vmin;
@@ -35,4 +35,19 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+h1 {
+  margin-left: 10px;
+}
+
+.idCard {
+  display: flex;
+  border: 1px solid black;
+  line-height: 20%;
+  margin: 10px;
+}
+
+.profilePic {
+  margin: 5px;
 }
