--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@ h1 {
   border: 1px solid black;
   line-height: 20%;
   margin: 10px;
+  background-color: rgb(red, green, blue);
 }
 
 .profilePic {
